fixing image not visible issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ font-family: Arial, Helvetica, sans-serif;
     bottom: -36px;
     width: 28px;
     height:37px;
-    background-image: url("../images/icon.png");
+    background-image: url("./images/icon.png");
     left: 40%;
 }
 
